infrastructure/ansible/files/manifests/prometheus_grafana/prometheus-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 9090
      protocol: TCP
      nodePort: 30001
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: kube-prometheus-stack-prometheus
